Fixed viewport issue for chrome on mobile

--- a/quicksets/style.css
+++ b/quicksets/style.css
@@ -103,7 +103,7 @@ main {
 }
 
 .app {
-    height: 100vh;
+    height: 100dvh;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
